增加北京颜色

--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+		body{
+			background:#000;
+			color:#fff;
+		}
+		
+		p{
+			color:#fff;
+			font-size:20px;
+			
+		}
+		
+	</style>
 </head>
 <body>
-	github静态资源项目搭建成功
+	<div>
+		<p>github静态资源项目搭建成功</p>
+	</div>
+	
 </body>
 </html>
