--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<style>
-		body{
-			background:#000;
-			color:#fff;
-		}
-		
-		p{
-			color:#fff;
-			font-size:20px;
-			
-		}
-		
-	</style>
-</head>
-<body>
-	<div>
-		<p>github静态资源项目搭建成功</p>
-	</div>
-	
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>my-blogas</title><link href=static/css/app.35509f016af20f09bb0c671ed7fb8ba6.css rel=stylesheet></head><body style="background:#6f6161; margin: 0px;padding: 0px;"><div id=app></div><script type=text/javascript src=static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=static/js/vendor.68391543fc98f4b02681.js></script><script type=text/javascript src=static/js/app.909073ad9f56c5ce5885.js></script></body></html>
